Added Bluetooth Headphones

--- a/AudioController.ini
+++ b/AudioController.ini
@@ -14,34 +14,42 @@ LeftButtonImage=left.png
 CenterButtonImage=center.png
 RightButtonImage=right.png
 HeadphonesButtonImage=headphones.png
+BluetoothButtonImage=bluetooth.png
 
 [MeterButtonLeft]
 Meter=Button
 Y=0
 X=0
 ButtonImage=#LeftButtonImage#
-ButtonCommand=[!CommandMeasure MeasureSetLeft "Run"][!SetOption MeterButtonLeft ButtonImage selected_#LeftButtonImage#][!SetOption MeterButtonCenter ButtonImage #CenterButtonImage#][!SetOption MeterButtonRight ButtonImage #RightButtonImage#][!SetOption MeterButtonHeadphones ButtonImage #HeadphonesButtonImage#]
+ButtonCommand=[!CommandMeasure MeasureSetLeft "Run"][!SetOption MeterButtonLeft ButtonImage selected_#LeftButtonImage#][!SetOption MeterButtonCenter ButtonImage #CenterButtonImage#][!SetOption MeterButtonRight ButtonImage #RightButtonImage#][!SetOption MeterButtonHeadphones ButtonImage #HeadphonesButtonImage#][!SetOption MeterButtonBluetooth ButtonImage #BluetoothButtonImage#]
 
 [MeterButtonCenter]
 Meter=Button
 Y=0
 X=50
 ButtonImage=#CenterButtonImage#
-ButtonCommand=[!CommandMeasure MeasureSetCenter "Run"][!SetOption MeterButtonLeft ButtonImage #LeftButtonImage#][!SetOption MeterButtonCenter ButtonImage selected_#CenterButtonImage#][!SetOption MeterButtonRight ButtonImage #RightButtonImage#][!SetOption MeterButtonHeadphones ButtonImage #HeadphonesButtonImage#]
+ButtonCommand=[!CommandMeasure MeasureSetCenter "Run"][!SetOption MeterButtonLeft ButtonImage #LeftButtonImage#][!SetOption MeterButtonCenter ButtonImage selected_#CenterButtonImage#][!SetOption MeterButtonRight ButtonImage #RightButtonImage#][!SetOption MeterButtonHeadphones ButtonImage #HeadphonesButtonImage#][!SetOption MeterButtonBluetooth ButtonImage #BluetoothButtonImage#]
 
 [MeterButtonRight]
 Meter=Button
 Y=0
 X=100
 ButtonImage=#RightButtonImage#
-ButtonCommand=[!CommandMeasure MeasureSetRight "Run"][!SetOption MeterButtonLeft ButtonImage #LeftButtonImage#][!SetOption MeterButtonCenter ButtonImage #CenterButtonImage#][!SetOption MeterButtonRight ButtonImage selected_#RightButtonImage#][!SetOption MeterButtonHeadphones ButtonImage #HeadphonesButtonImage#]
+ButtonCommand=[!CommandMeasure MeasureSetRight "Run"][!SetOption MeterButtonLeft ButtonImage #LeftButtonImage#][!SetOption MeterButtonCenter ButtonImage #CenterButtonImage#][!SetOption MeterButtonRight ButtonImage selected_#RightButtonImage#][!SetOption MeterButtonHeadphones ButtonImage #HeadphonesButtonImage#][!SetOption MeterButtonBluetooth ButtonImage #BluetoothButtonImage#]
 
 [MeterButtonHeadphones]
 Meter=Button
-Y=0
-X=150
+Y=50
+X=25
 ButtonImage=#HeadphonesButtonImage#
-ButtonCommand=[!CommandMeasure MeasureSetHeadphones "Run"][!SetOption MeterButtonLeft ButtonImage #LeftButtonImage#][!SetOption MeterButtonCenter ButtonImage #CenterButtonImage#][!SetOption MeterButtonRight ButtonImage #RightButtonImage#][!SetOption MeterButtonHeadphones ButtonImage selected_#HeadphonesButtonImage#]
+ButtonCommand=[!CommandMeasure MeasureSetHeadphones "Run"][!SetOption MeterButtonLeft ButtonImage #LeftButtonImage#][!SetOption MeterButtonCenter ButtonImage #CenterButtonImage#][!SetOption MeterButtonRight ButtonImage #RightButtonImage#][!SetOption MeterButtonHeadphones ButtonImage selected_#HeadphonesButtonImage#][!SetOption MeterButtonBluetooth ButtonImage #BluetoothButtonImage#]
+
+[MeterButtonHeadphones]
+Meter=Button
+Y=50
+X=75
+ButtonImage=#BluetoothButtonImage#
+ButtonCommand=[!CommandMeasure MeasureSetBluetooth "Run"][!SetOption MeterButtonLeft ButtonImage #LeftButtonImage#][!SetOption MeterButtonCenter ButtonImage #CenterButtonImage#][!SetOption MeterButtonRight ButtonImage #RightButtonImage#][!SetOption MeterButtonHeadphones ButtonImage #HeadphonesButtonImage#][!SetOption MeterButtonBluetooth ButtonImage selected_#BluetoothButtonImage#]
 
 [MeasureSetLeft]
 Measure=Plugin
@@ -63,50 +71,7 @@ Measure=Plugin
 Plugin=RunCommand
 Parameter=SoundVolumeView.exe /SetDefault "Sound Blaster Play! 3\Device\Speakers\Render" 0
 
-
-; [MeasureDevice]
-; Measure=Plugin
-; Plugin=RunCommand
-; Parameter="C:\Program Files\Oracle\VirtualBox\VBoxManage.exe" list runningvms
-; Timeout=10000
-; OutputType=ANSI
-; OutputFile=list.txt
-; State=Maximized
-; DynamicVariables=1
-; RegExp=(?siU)(Ubuntu 20.04)
-; IfMatch=Ubuntu 20.04
-; IfMatchAction=[!SetOption TempMeter Text "VM: On"]
-; IfNotMatchAction=[!SetOption TempMeter Text "VM: Off"]
-; UpdateRate=10
-
-; [TempMeter]
-; Meter=String
-; H=50
-; W=100
-; AntiAlias=1
-; FontSize=20
-; FontFace=Montserrat
-; FontColor=200,200,200,255
-; Group=Meters
-
-; [MeasureOnHeadless]
-; Measure=Plugin
-; Plugin=RunCommand
-; Parameter=on-headless.bat
-; Timeout=10000
-; OutputType=ANSI
-; OutputFile=on-headless.txt
-; State=Hide
-; DynamicVariables=1
-; FinishAction=[!CommandMeasure MeasureDevice "Run"][!UpdateMeterGroup "Meters"]
-
-; [MeasureOff]
-; Measure=Plugin
-; Plugin=RunCommand
-; Parameter=off.bat
-; Timeout=10000
-; OutputType=ANSI
-; OutputFile=off.txt
-; State=Maximized
-; DynamicVariables=1
-; FinishAction=[!CommandMeasure MeasureDevice "Run"][!UpdateMeterGroup "Meters"]
+[MeasureSetBluetooth]
+Measure=Plugin
+Plugin=RunCommand
+Parameter=SoundVolumeView.exe /SetDefault "WH-XB900N Stereo\Device\Headphones\Render" 0
